<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PetVetDr+</string>

    <string name="already_have_an_account">Already have an Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_here">New user? Register here</string>
    <string name="top_icon">Top icon</string>
    <string name="create_your_account">Create your Account</string>
    <string name="name">Username</string>
    <string name="phone">Mobile Number</string>
    <string name="signup">Signup</string>
    <string name="doctor">Doctor</string>
    <string name="user">User</string>
    <string name="todo">TODO</string>
    <string name="getotp">Get OTP</string>
    <string name="register_your_complaint">Register Your Complaint</string>
    <string name="category">Pet Category</string>
    <string name="weight">Weight</string>
    <string name="days_of_suffering">Days Of Suffering</string>
    <string name="symptoms">Symptoms</string>
    <string name="register_complaint">Register Complaint</string>
    <string name="pet_profile">Pet Profile</string>
    <string name="pet_owner_name">Pet Owner Name</string>
    <string name="owner_email">Owner Email</string>
    <string name="submit">Submit</string>
    <string name="primary_solutions">Primary Solutions</string>
    <string name="advancesolution">Advance Solution</string>
    <string name="video_call">Pay for Video Call</string>
    <string name="pay_for_appoint">Pay for Booking Appointment</string>
    <string name="make_payment">Make Payment</string>
    <string name="upi_id">UPI ID</string>
    <string name="amount">Amount</string>
    <string name="pay">Payment</string>
    <string name="registered_email">Registered Email</string>
    <string name="doctor_profile">Doctor Profile</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_email">Doctor Email</string>
    <string name="problem_solution">Problem Solution</string>
    <string name="medicine">Medicine</string>
    <string name="remedies_solution">Remedies/Solution</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="already_nhave_an_naccount">Already\nhave an \nAccount?</string>
    <string name="forgot_password_1">Forgot Password?</string>
    <string name="login1">Login</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="username">Username</string>
    <string name="select">Select</string>
    <string name="already_have_an_account1">Already have an account?</string>
    <string name="inputPassword">Password</string>
    <string name="login_username_hint">Username</string>
    <string name="address">Address</string>

</resources>